benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix052_tso.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix052_tso.oepc.yml/mix052_tso.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix052_tso.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_mhow967t/tmp/tmpizbk5y71.c
Compilation started
/tmp/BenchExec_run_mhow967t/tmp/tmpizbk5y71.c: In function ‘main’:
/tmp/BenchExec_run_mhow967t/tmp/tmpizbk5y71.c:678:19: error: ‘FALSE’ undeclared (first use in this function)
  678 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_mhow967t/tmp/tmpizbk5y71.c:678:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
